# django-snodas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  conda-requirements.txt  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  run_waitress_server.py  setup.py  snodas_database.sql
doc/: useful-queries.md
snodas/: 3_1_5.mvt  4_3_5.mvt  4_3_6.mvt  __init__.py  apps.py  constants.py  exceptions.py  mbtile.geojson  signals.py  tile.mvt  types.py  urls.py  views.py  wsgi.py
snodas-ui/: about.html  snodas.html
snodas-ui/css/: base.css  details.css  map.css  navbar.css
snodas-ui/js/: aoi_map.js  snodas_map.js
snodas/fixtures/sites_migrations/: 0001_initial.py  0002_create_sites.py
snodas/management/: utils.py
snodas/management/commands/: auditdatabases.py  createdb.py  createrasterdb.py  dropdb.py  exportraster.py  exportrasterall.py  importsnodas.py  install.py  load_raster.py  loadpourpoint.py  loadraster.py  loadstreamflow.py  runsql.py  setupiis.py  streamflowregression.py  winfcgi.py
snodas/migrations/: 0001_initial.py  0002_streamflow.py  0003_pourpoint_unique.py  0004_fix-bust-cache.py  0004_fix_bust_cache.py  0005_fix_stat_calc_triggers.py  0006_fix_snowcover_calc.py
snodas/migrations/sql/: 0001_initial.sql  0002_streamflow.sql  0003_pourpoint_unique.sql  0004_fix_bust_cache.sql  0005_fix_stat_calc_triggers.sql  0006_fix_snowcover_calc.sql
snodas/queries/: __init__.py  streamflow.sql
snodas/settings/: __init__.py  base.py  caching.py  cors.py  database.py  development.py  logging.py  production.py  rest.py  snodas.py  windows.py
snodas/snodas/: aoi.py  constants.py  coordinates.py  db.py  elevation_band.py  fileinfo.py  input_rasters.py  raster.py  raster_collection.py  zonal_stats.py
snodas/utils/: filesystem.py  http.py  logging.py  migrations.py  streams.py
snodas/views/: pourpoint_tiles.py  pourpoints.py  snodas_analysis.py  snodas_export.py  snodas_stats.py  snodas_tiles.py  stats.py  tiles.py
tests/: test_constant.py  test_snodas_stats.py
