[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'django-snodas'
authors = [
    {name = 'Jarrett Keifer', email = 'jkeifer@pdx.edu'},
]
description = 'Interface to SNODAS daily and aggregate rasters as a tile service and for analytical functions.'
requires-python = '>=3.12'
dependencies = [
    'Django',
    'django-ninja',
    'django-split-settings',
    'django-cors-headers',
    'psycopg2-binary',
    'pydantic',
    'pyyaml',
    'sqlparse',
]
dynamic = [
  'readme',
]
version = '0.0.1'

[project.scripts]
snodas = "manage:main"

[project.urls]
Repository = 'https://github.com/PSU-CSAR/django-snodas'

[tool.setuptools]
packages = ["snodas"]
py-modules = ["manage"]

[tool.setuptools.dynamic]
readme = {file = 'README.md'}
